setup spacing in the team page. fixed whitespace on the side

--- a/client/src/styles/components/_team.scss
+++ b/client/src/styles/components/_team.scss
@@ -9,10 +9,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    margin-top: 3rem;
+    --bs-gutter-x:var(--bs-gutter-x)
 }
 
-.teamCol {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
